--- a/Client/src/me/mupu/gui/Login.fxml
+++ b/Client/src/me/mupu/gui/Login.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="246.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="246.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.mupu.gui.LoginController">
    <children>
       <Text layoutX="129.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login/Register">
          <font>
