--- a/Server/src/main/resources/templates/admin/admin.html
+++ b/Server/src/main/resources/templates/admin/admin.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LOGGEDOUT</title>
+    <title>ADMIN</title>
 </head>
 <body>
-<h1>LOGGEDOUT</h1>
+<h1>ADMIN</h1>
+<p><a href="/home">Home here</a></p>
 </body>
 </html>
