--- a/Server/src/main/resources/templates/everyone/home.html
+++ b/Server/src/main/resources/templates/everyone/home.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1>HOME</h1>
-<label th:text="${_csrf.parameterName}"></label>
-<label th:text="${_csrf.token}"></label>
+<p><a href="/login">Login here</a></p>
+<p><a href="/test">Test here</a></p>
+<p><a href="/settings">Settings here</a></p>
+<p><a href="/logout">Logout here</a></p>
+<p><a href="/admin">Admin here</a></p>
 </body>
 </html>
