--- a/Server/src/main/resources/templates/everyone/login.html
+++ b/Server/src/main/resources/templates/everyone/login.html
@@ -1,14 +1,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example </title>
+    <title>Login Page</title>
 </head>
 <body>
+<h1>Login Page</h1>
+<p><a href="/register">Register here</a></p>
+<p><a href="/home">Home here</a></p>
 <div th:if="${param.error}"> Invalid username and password. </div>
 <div th:if="${param.logout}"> You have been logged out. </div>
+<div th:if="${param.accountDeleted}"> Your account has been deleted. </div>
+<div th:if="${param.dataChanged}"> Succsessfully changed your login credentials. </div>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
+    <div><label> User Name: <input type="text" name="username" autofocus/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
-    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
