--- a/Server/src/main/resources/templates/test.html
+++ b/Server/src/main/resources/templates/test.html
@@ -1,7 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login Page</title></head>
+    <title>TEST</title></head>
 <body>
+<h1>TEST</h1>
+<p><a href="/home">Home here</a></p>
 <table>
     <th:block th:each="user : ${sql}">
         <tr>
