--- a/Server/src/main/resources/templates/everyone/home.html
+++ b/Server/src/main/resources/templates/everyone/home.html
@@ -7,6 +7,7 @@
 <body>
 <h1>HOME</h1>
 <p><a href="/login">Login here</a></p>
+<p><a href="/registration">Register here</a></p>
 <p><a href="/test">Test here</a></p>
 <p><a href="/settings">Settings here</a></p>
 <p><a href="/logout">Logout here</a></p>
