--- a/Server/src/main/resources/templates/admin/adminHome.html
+++ b/Server/src/main/resources/templates/admin/adminHome.html
@@ -8,5 +8,6 @@
 <h1>ADMIN HOME</h1>
 <p><a href="/home">Home here</a></p>
 <p><a href="/admin/ausstattung">Ausstattungsgegenstände here</a></p>
+<p><a href="/admin/raum">Räume here</a></p>
 </body>
 </html>
