--- a/Server/src/main/resources/templates/user/userHome.html
+++ b/Server/src/main/resources/templates/user/userHome.html
@@ -7,8 +7,7 @@
 <body>
 <h1>ADMIN HOME</h1>
 <p><a href="/home">Home here</a></p>
-<p><a href="/user">User Home here</a></p>
-<p><a href="/admin/ausstattung">Ausstattungsgegenstände here</a></p>
-<p><a href="/admin/raum">Räume here</a></p>
+<p><a href="/admin">Admin Home here</a></p>
+<p><a href="/user/settings">Settings here</a></p>
 </body>
 </html>
