--- a/Server/src/main/resources/templates/everyone/home.html
+++ b/Server/src/main/resources/templates/everyone/home.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>HOME</title>
 </head>
 <body>
 <h1>HOME</h1>
-<p><a href="/login">Login here</a></p>
 <p><a href="/registration">Register here</a></p>
-<p><a href="/test">Test here</a></p>
-<p><a href="/settings">Settings here</a></p>
+<p><a href="/login">Login here</a></p>
+<p><a href="/user">User Home here</a></p>
+<p><a href="/admin">Admin Home here</a></p>
 <p><a href="/logout">Logout here</a></p>
-<p><a href="/admin">Admin here</a></p>
 </body>
 </html>
