--- a/Server/src/main/resources/templates/user/userHome.html
+++ b/Server/src/main/resources/templates/user/userHome.html
@@ -2,12 +2,17 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>ADMIN HOME</title>
+    <title>USER HOME</title>
 </head>
 <body>
-<h1>ADMIN HOME</h1>
+<h1>USER HOME</h1>
 <p><a href="/home">Home here</a></p>
 <p><a href="/admin">Admin Home here</a></p>
+<p><a href="/user/termine">Termine here</a></p>
 <p><a href="/user/settings">Settings here</a></p>
+
+<table>
+
+</table>
 </body>
 </html>
