--- a/Server/src/main/resources/templates/admin/ausstattung.html
+++ b/Server/src/main/resources/templates/admin/ausstattung.html
@@ -29,7 +29,7 @@
                 <td><button type="submit">Update</button></td>
             </form>
 
-            <form action="#" th:action="'ausstattung/delete/' + ${item.getAusstattungsgegenstandid()}" method="post">
+            <form action="#" th:action="'ausstattung/delete/' + ${item.getAusstattungsgegenstandid()}" th:method="delete">
                 <td><button type="submit">Delete</button></td>
             </form>
         </tr>
