--- a/Server/src/main/resources/templates/admin/raum.html
+++ b/Server/src/main/resources/templates/admin/raum.html
@@ -25,7 +25,7 @@
     <th:block th:each="item : ${items}">
         <tr th:if="${items.isEmpty()}" th:text="No entries found!"></tr>
         <tr>
-            <form action="#" th:action="@{raum/edit}" method="post">
+            <form action="#" th:action="@{raum/edit}" th:method="put">
                 <td><input type="text" name="id" th:value="${item.getRaumid()}" readonly /></td>
                 <td><input type="text" name="ort" th:value="${item.getOrt()}" /></td>
                 <td><input type="text" name="anzahlStuhl" th:value="${item.getAnzahlstuhl()}" /></td>
@@ -38,7 +38,7 @@
                 <td><button type="submit">Update</button></td>
             </form>
 
-            <form action="#" th:action="'raum/delete/' + ${item.getRaumid()}" method="post">
+            <form action="#" th:action="'raum/delete/' + ${item.getRaumid()}" th:method="delete">
                 <td><button type="submit">Delete</button></td>
             </form>
         </tr>
