--- a/Server/src/main/resources/templates/user/neueBesprechung.html
+++ b/Server/src/main/resources/templates/user/neueBesprechung.html
@@ -20,13 +20,13 @@
 
         <tr>
             <td><label>Start:</label></td>
-            <td><input th:field="*{zeitraumStart}" type="datetime-local" value="2017-06-01T08:30"/></td>
+            <td><input th:field="*{zeitraumStart}" type="datetime-local" /></td>
             <td th:if="${#fields.hasErrors('zeitraumStart')}" th:errors="*{zeitraumStart}"></td>
         </tr>
 
         <tr>
             <td><label>Ende:</label></td>
-            <td><input th:field="*{zeitraumEnde}" type="datetime-local" value="2000-01-01T00:00:00"/></td>
+            <td><input th:field="*{zeitraumEnde}" type="datetime-local" /></td>
             <td th:if="${#fields.hasErrors('zeitraumEnde')}" th:errors="*{zeitraumEnde}"></td>
         </tr>
         <tr>
@@ -77,7 +77,7 @@
             <td>
                 <ul>
                     <li th:if="${userList.size() <= 1}"><label>Keine User verfügbar</label></li>
-                    <li th:each="user: ${userList}" th:unless="${#strings.equals(user.getPersonid(), userId)}">
+                    <li th:each="user: ${userList}" >
                         <input type="checkbox"
                                th:field="*{invitedUsers}"
                                th:value="${user.getPersonid()}"/>
