cleaned up project. checked for restfull errors

--- a/Server/src/main/resources/templates/admin/adminHome.html
+++ b/Server/src/main/resources/templates/admin/adminHome.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1>ADMIN HOME</h1>
-<p><a href="/home">Home here</a></p>
-<p><a href="/user">User Home here</a></p>
-<p><a href="/admin/ausstattung">Ausstattungsgegenstände here</a></p>
-<p><a href="/admin/raum">Räume here</a></p>
+<p><a href="/home">Home</a></p>
+<p><a href="/user">User Home</a></p>
+<p><a href="/admin/ausstattung">Ausstattungsgegenstände</a></p>
+<p><a href="/admin/raum">Räume</a></p>
+<p><a href="/logout">Logout</a></p>
 </body>
 </html>
