--- a/Server/src/main/resources/templates/everyone/home.html
+++ b/Server/src/main/resources/templates/everyone/home.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h1>HOME</h1>
-<p><a href="/registration">Register here</a></p>
-<p><a href="/login">Login here</a></p>
-<p><a href="/user">User Home here</a></p>
-<p><a href="/admin">Admin Home here</a></p>
-<p><a href="/logout">Logout here</a></p>
+<p><a href="/registration">Register</a></p>
+<p><a href="/login">Login</a></p>
+<p><a href="/user">User Home</a></p>
+<p><a href="/admin">Admin Home</a></p>
+<p><a href="/logout">Logout</a></p>
 </body>
 </html>
