--- a/Server/src/main/resources/templates/user/userHome.html
+++ b/Server/src/main/resources/templates/user/userHome.html
@@ -6,14 +6,12 @@
 </head>
 <body>
 <h1>USER HOME</h1>
-<p><a href="/home">Home here</a></p>
-<p><a href="/admin">Admin Home here</a></p>
-<p><a href="/user/termine">Termine here</a></p>
-<p><a href="/user/neueBesprechung">Besprechung erstellen here</a></p>
-<p><a href="/user/settings">Settings here</a></p>
+<p><a href="/home">Home</a></p>
+<p><a href="/admin">Admin Home</a></p>
+<p><a href="/user/termine">Termine</a></p>
+<p><a href="/user/neueBesprechung">Besprechung erstellen</a></p>
+<p><a href="/user/settings">Settings</a></p>
+<p><a href="/logout">Logout</a></p>
 
-<table>
-
-</table>
 </body>
 </html>
