--- a/Server/src/main/resources/templates/admin/ausstattung.html
+++ b/Server/src/main/resources/templates/admin/ausstattung.html
@@ -21,7 +21,7 @@
     <th:block th:each="item : ${items}">
         <tr th:if="${items.isEmpty()}" th:text="No entries found!"></tr>
         <tr>
-            <form action="#" th:action="@{ausstattung/edit}" th:method="put">
+            <form action="#" th:action="'/admin/ausstattung/edit/' + ${item.getAusstattungsgegenstandid()}" th:method="put">
                 <td><input type="text" name="id" th:value="${item.getAusstattungsgegenstandid()}" readonly /></td>
                 <td><input type="text" name="name" th:value="${item.getName()}" /></td>
                 <td><input type="text" name="anzahl" th:value="${item.getAnzahl()}" /></td>
@@ -29,7 +29,7 @@
                 <td><button type="submit">Update</button></td>
             </form>
 
-            <form action="#" th:action="'ausstattung/delete/' + ${item.getAusstattungsgegenstandid()}" th:method="delete">
+            <form action="#" th:action="'/admin/ausstattung/delete/' + ${item.getAusstattungsgegenstandid()}" th:method="delete">
                 <td><button type="submit">Delete</button></td>
             </form>
         </tr>
@@ -39,7 +39,7 @@
         <br>
         <td><h2>Add new item</h2></td>
     </tr>
-    <form action="#" th:action="@{ausstattung/add}" method="post">
+    <form action="#" th:action="@{/admin/ausstattung/add}" method="post">
         <tr><td><input type="text" name="name" placeholder="Name des Gegenstands" /></td></tr>
 
         <tr><td><input type="text" name="anzahl" placeholder="Anzahl der Gegenstände" /></td></tr>
