--- a/Server/src/main/resources/templates/everyone/confirmation.html
+++ b/Server/src/main/resources/templates/everyone/confirmation.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <h1>CONFIRMATION</h1>
-<p><a href="/login">Login here</a></p>
+<p><a href="/login">Login</a></p>
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
