--- a/Server/src/main/resources/templates/everyone/login.html
+++ b/Server/src/main/resources/templates/everyone/login.html
@@ -4,8 +4,9 @@
 </head>
 <body>
 <h1>Login Page</h1>
-<p><a href="/register">Register here</a></p>
-<p><a href="/home">Home here</a></p>
+<p><a href="/registration">Register</a></p>
+<p><a href="/home">Home</a></p>
+
 <div th:if="${param.error}"> Invalid username and password. </div>
 <div th:if="${param.logout}"> You have been logged out. </div>
 <div th:if="${param.accountDeleted}"> Your account has been deleted. </div>
