--- a/Server/src/main/resources/templates/user/termine.html
+++ b/Server/src/main/resources/templates/user/termine.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>TERMINE</h1>
-<p><a href="/user">User Home here</a></p>
+<p><a href="/user">User Home</a></p>
 
 <table>
     <thead>
