--- a/Server/src/main/resources/templates/everyone/registration.html
+++ b/Server/src/main/resources/templates/everyone/registration.html
@@ -4,12 +4,13 @@
 </head>
 <body>
 <h1>REGISTRATION</h1>
+<p><a href="/home">Home</a></p>
 <p><a href="/login">Login</a></p>
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form action="#" th:if="!${success} + !${error}" th:action="@{/registration}" th:object="${registrationForm}" method="post">
+            <form action="#" th:if="!${success} and !${error}" th:action="@{/registration}" th:object="${registrationForm}" method="post">
                 <table>
                     <tr>
                         <td>Vorname:</td>
