started superadmin userverwalten

--- a/Server/src/main/resources/templates/admin/adminHome.html
+++ b/Server/src/main/resources/templates/admin/adminHome.html
@@ -8,6 +8,7 @@
 <h1>ADMIN HOME</h1>
 <p><a href="/home">Home</a></p>
 <p><a href="/user">User Home</a></p>
+<p><a href="/superadmin">Superadmin Home</a></p>
 <p><a href="/admin/ausstattung">Ausstattungsgegenstände</a></p>
 <p><a href="/admin/raum">Räume</a></p>
 <p><a href="/logout">Logout</a></p>
