--- a/Server/src/main/resources/templates/admin/raum.html
+++ b/Server/src/main/resources/templates/admin/raum.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>RÄUME</h1>
-<p><a href="/admin">Admin Home here</a></p>
+<p><a href="/admin">Admin Home</a></p>
 
 <table>
     <thead>
