--- a/Server/src/main/resources/templates/superadmin/superadminHome.html
+++ b/Server/src/main/resources/templates/superadmin/superadminHome.html
@@ -2,15 +2,14 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>HOME</title>
+    <title>SUPERADMIN HOME</title>
 </head>
 <body>
-<h1>HOME</h1>
-<p><a href="/registration">Register</a></p>
-<p><a href="/login">Login</a></p>
+<h1>SUPERADMIN HOME</h1>
+<p><a href="/home">Home</a></p>
 <p><a href="/user">User Home</a></p>
 <p><a href="/admin">Admin Home</a></p>
-<p><a href="/superadmin">Superadmin Home</a></p>
+<p><a href="/superadmin/userVerwalten">User verwalten</a></p>
 <p><a href="/logout">Logout</a></p>
 </body>
 </html>
