--- a/Server/src/main/resources/templates/user/userHome.html
+++ b/Server/src/main/resources/templates/user/userHome.html
@@ -8,6 +8,7 @@
 <h1>USER HOME</h1>
 <p><a href="/home">Home</a></p>
 <p><a href="/admin">Admin Home</a></p>
+<p><a href="/superadmin">Superadmin Home</a></p>
 <p><a href="/user/termine">Termine</a></p>
 <p><a href="/user/neueBesprechung">Besprechung erstellen</a></p>
 <p><a href="/user/settings">Settings</a></p>
